Images no longer break out of post frame if size too big

--- a/client/src/containers/Thread.css
+++ b/client/src/containers/Thread.css
@@ -5,3 +5,7 @@ blockquote {
   color: #3f83c7;
   border-left: 0.25em solid #0266c8;
 }
+
+img {
+  width: 100%;
+}
